manifests/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alb-public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb
  namespace: alb-public
  labels:
    app: alb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alb
  template:
    metadata:
      labels:
        app: alb
    spec:
      containers:
        - name: alb
          image: "nginxdemos/hello:latest"
          ports:
            - containerPort: 80
              name: p80
---
apiVersion: v1
kind: Service
metadata:
  name: alb-service
  namespace: alb-public
spec:
  type: ClusterIP
  # selector:
  #   app: alb
  ports:
    - name: default-http
      protocol: TCP
      port: 80
      targetPort: p80
    - name: default-https
      protocol: TCP
      port: 443
      targetPort: p80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-public
  namespace: alb-public
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ca-central-1:667740703053:certificate/01a9a098-2e5d-49cf-81d3-23d17cf8e96a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: humanitec-public
spec:
  rules:
    - host: nick.walhall.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alb-service
                port:
                  name: default-http
